@@ -55,7 +55,7 @@
 conformance of a Web browser's DOM implementation, with regard to a
 set of interfaces described by a WebIDL fragment.</p>
 <p>For more information, see the readme document
-<a href="http://suika.fam.cx/www/webidl2tests/doc/readme">http://suika.fam.cx/www/webidl2tests/doc/readme</a>.</p>
+<a href="http://suika.fam.cx/www/webidl2tests/readme">http://suika.fam.cx/www/webidl2tests/readme</a>.</p>
 <p>
 </p>
 <hr />
@@ -199,8 +199,9 @@ Whatpm package <a href="http://suika.fam.cx/www/markup/html/whatpm/readme">http:
 <h1><a name="see_also">SEE ALSO</a></h1>
 <p>Readme <a href="http://suika.fam.cx/www/webidl2tests/readme">http://suika.fam.cx/www/webidl2tests/readme</a>.</p>
 <p>Web IDL specification, revision 1.96 (3 September 2008 Editor's Draft)
-<a href="http://dev.w3.org/cvsweb/~checkout~/2006/webapi/WebIDL/Overview.html?rev=1.96&content-type=text/html;%20charset=utf-8">http://dev.w3.org/cvsweb/~checkout~/2006/webapi/WebIDL/Overview.html</a></p>
-<p><a href="http://suika.fam.cx/www/markup/html/whatpm/Whatpm/WebIDL.html">Whatpm::WebIDL</a></p>
+<a href="http://dev.w3.org/cvsweb/~checkout~/2006/webapi/WebIDL/Overview.html?rev=1.96&content-type=text/html;%20charset=utf-8">http://dev.w3.org/cvsweb/~checkout~/2006/webapi/WebIDL/Overview.html</a>.</p>
+<p><a href="http://suika.fam.cx/www/markup/html/whatpm/Whatpm/WebIDL.html">Whatpm::WebIDL</a>, which is used to parse IDL
+fragments.</p>
 <p>
 </p>
 <hr />
