@@ -1,3 +1,7 @@
+2008-10-11  Wakaba  <wakaba@suika.fam.cx>
+
+	* readme.en.html: New document.
+
 2008-10-09  Wakaba  <wakaba@suika.fam.cx>
 
 	* cvscommit.sh: New file.
